syntax = "proto3";

package permission;

// Service for handling admin (internal) projectmgt action
service Iam {
	rpc AddPermission(Input) returns(Reply) {}
	rpc RemovePermission(Input) returns(Reply){}
	rpc ReplacePermission(Input) returns(Reply){}
}

message Input {
	string id			= 1;
	string perm_type	= 2;
	string resource		= 3;
	string role			= 4;
}

message Reply {
}
